--- a/a.html
+++ b/a.html
@@ -1,47 +1,31 @@
 <!DOCTYPE html>
 <html>
-<head>
-<meta charset="utf-8">
-<!-- <meta name="viewport" content="width=device-width, initial-scale=1.0"> -->
-    <title>wx@jsshu</title>
-	<style>
-	div {
-		width: 250px;
-		height: 250px;
-		border: 10px solid orange;
-		border-radius: 10px;
-		padding: 15px;
-		margin: 10px;
-		background-color: orange;
-		float: left;
-	}
-
-		h1
-		{
-			color: orange;
-			text-align:center;
-		}
-		p
-		{
-			font-size: 30px;
-		}
-	</style>
-</head>
-
+ <head>
+ 	<meta charset="utf-8">
+ 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+ <title>1@jsshu</title>
+ <style>
+ div.box{
+ 	width: 200px;
+ 	height: 200px;
+ 	padding: 50px;
+ 	border-radius: 10%;
+ 	background-color: orange;
+ 	margin: 1%;
+ 	float: left;
+ }
+ </style>
+ </head>
 <body>
-<h1>九宫格</h1>
-<p>内容</p>
 
-<div>cotent in box model</div>
-<div>cotent in box model</div>
-<div>cotent in box model</div>
-<h1 style="clear:both;"></h1>
-<div>cotent in box model</div>
-<div>cotent in box model</div>
-<div>cotent in box model</div>
-<h1 style="clear:both;"></h1>
-<div>cotent in box model</div>
-<div>cotent in box model</div>
-<div>cotent in box model</div>
+<div class="box"></div>
+<div class="box"></div>
+<div class="box"></div>
+<div class="box"></div>
+<div class="box"></div>
+<div class="box"></div>
+<div class="box"></div>
+<div class="box"></div>
+<div class="box"></div>
 </body>
 </html>
