--- a/b.html
+++ b/b.html
@@ -6,15 +6,25 @@
 	<style>
 		p.margin
 		{
-			margin:300px 150px 100px;
+			margin:100px 150px;
 		}
 		p.padding
 		{
 			padding: 100px 100px;
 		}
+		img.center
+		{
+			display: block;
+			margin: 0 auto;
+			width: 25%;
+			height:25%;
+			margin-top: 20%;
+		}
 	</style>
 </head>
 <body style="background-color: #68cdd5;">
+	<img class="center" src="C:\Users\song\Documents\images\task3_26.png">
+	<img  src="C:\Users\song\Desktop\project-2-markove.jpg" width="50" height="50">
 	<p class="margin" style="color: white;font-size: 20px;">
 		在介绍参考线切图之前，我们需要搞清楚什么是参考线。先讨论一个问题，假如我们需要使用PS设置一个网页，在网页内容居中显示，左右两边都流出200像素的宽度。如果两边都有一条参考线做参考，这样是不是就很方便了。
 	</p>
