--- a/a.html
+++ b/a.html
@@ -5,27 +5,37 @@
  	<meta name="viewport" content="width=device-width, initial-scale=1.0">
  <title>1@jsshu</title>
  <style>
+/* html{
+ 	height: 100%
+ }
+ body{
+ 	height: 100%
+ }*/
  div.box{
- 	width: 200px;
- 	height: 200px;
- 	padding: 50px;
+ 	width: 31%;
+ 	padding-bottom: 31%;
  	border-radius: 10%;
  	background-color: orange;
  	margin: 1%;
  	float: left;
  }
+ .clear{
+ 	clear: both;
+ }
  </style>
  </head>
 <body>
 
-<div class="box"></div>
-<div class="box"></div>
-<div class="box"></div>
-<div class="box"></div>
-<div class="box"></div>
-<div class="box"></div>
-<div class="box"></div>
-<div class="box"></div>
-<div class="box"></div>
+
+<div class="box">content</div>
+<div class="box">content</div>
+<div class="box">content</div>
+<div class="box">content</div>
+<div class="box">content</div>
+<div class="box">content</div>
+<div class="box">content</div>
+<div class="box">content</div>
+<div class="box">content</div>
+
 </body>
 </html>
