--- a/b.html
+++ b/b.html
@@ -2,35 +2,52 @@
 <html>
 <head>
 	<meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>3@jsshu</title>
 	<style>
 		p.margin
 		{
-			margin:100px 150px;
+			margin:10vw 10vw;
 		}
 		p.padding
 		{
-			padding: 100px 100px;
+			padding: 5vw 5vw;
 		}
 		img.center
 		{
 			display: block;
 			margin: 0 auto;
-			width: 25%;
-			height:25%;
+			width: 90px;
 			margin-top: 20%;
+		}
+		img.left{
+			width: 55px;
+			float: left;
+			margin-left: 10vw;
+		}
+		img.right{
+			width: 48px;
+			float: right;
+			margin-right: 10vw;
+		}
+		p{
+			color: white;
+			font-size: 15px;
 		}
 	</style>
 </head>
 <body style="background-color: #68cdd5;">
-	<img class="center" src="C:\Users\song\Documents\images\task3_26.png">
-	<img  src="C:\Users\song\Desktop\project-2-markove.jpg" width="50" height="50">
-	<p class="margin" style="color: white;font-size: 20px;">
+	<img class="center" src=".\images\task3_26.png">
+	<!-- <img  src="C:\Users\song\Desktop\project-2-markove.jpg" width="50" height="50"> -->
+	<p class="margin" >
 		在介绍参考线切图之前，我们需要搞清楚什么是参考线。先讨论一个问题，假如我们需要使用PS设置一个网页，在网页内容居中显示，左右两边都流出200像素的宽度。如果两边都有一条参考线做参考，这样是不是就很方便了。
 	</p>
-	<p class="padding" style="background-color: grey; color: white;font-size: 20px;">
+<!-- 	<p class="padding" style="background-color: grey; color: white;font-size: 20px;">
 		在介绍参考线切图之前，我们需要搞清楚什么是参考线。先讨论一个问题，假如我们需要使用PS设置一个网页，在网页内容居中显示，左右两边都流出200像素的宽度。如果两边都有一条参考线做参考，这样是不是就很方便了。
-	</p>
-
+	</p> -->
+	<div style="margin-top: 10vw;">
+		<img class="left" src=".\images\task3_31.png">
+	    <img class="right" src=".\images\task3_34.png">
+	</div>
 </body>
 </html>
