--- a/b.html
+++ b/b.html
@@ -7,11 +7,11 @@
 	<style>
 		p.margin
 		{
-			margin:10vw 10vw;
+			margin:10vmin 10vmin;
 		}
 		p.padding
 		{
-			padding: 5vw 5vw;
+			padding: 5vmin 5vmin;
 		}
 		img.center
 		{
@@ -23,12 +23,12 @@
 		img.left{
 			width: 55px;
 			float: left;
-			margin-left: 10vw;
+			margin-left: 10vmin;
 		}
 		img.right{
 			width: 48px;
 			float: right;
-			margin-right: 10vw;
+			margin-right: 10vmin;
 		}
 		p{
 			color: white;
@@ -45,7 +45,7 @@
 <!-- 	<p class="padding" style="background-color: grey; color: white;font-size: 20px;">
 		在介绍参考线切图之前，我们需要搞清楚什么是参考线。先讨论一个问题，假如我们需要使用PS设置一个网页，在网页内容居中显示，左右两边都流出200像素的宽度。如果两边都有一条参考线做参考，这样是不是就很方便了。
 	</p> -->
-	<div style="margin-top: 10vw;">
+	<div style="margin-top: 10vmin;">
 		<img class="left" src=".\images\task3_31.png">
 	    <img class="right" src=".\images\task3_34.png">
 	</div>
