--- a/b.html
+++ b/b.html
@@ -5,20 +5,24 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>3@jsshu</title>
 	<style>
-		p.margin
-		{
-			margin:10vmin 10vmin;
+		body{
+			background-color: #68cdd5;
 		}
-		p.padding
-		{
-			padding: 5vmin 5vmin;
+		img.back{
+			width: 40px;
 		}
-		img.center
-		{
+		img.center{
 			display: block;
 			margin: 0 auto;
 			width: 90px;
-			margin-top: 20%;
+			margin-top: 20vmin;
+		}
+		p.margin
+		{
+			margin:20vmin 10vmin 10vmin;
+		}
+		div.margin{
+			margin-top: 20vmin;
 		}
 		img.left{
 			width: 55px;
@@ -32,20 +36,17 @@
 		}
 		p{
 			color: white;
-			font-size: 15px;
+			font-size: 1em;
 		}
 	</style>
 </head>
-<body style="background-color: #68cdd5;">
+<body>
+	<img class="back" src="./images/task3_03.jpg">
 	<img class="center" src=".\images\task3_26.png">
-	<!-- <img  src="C:\Users\song\Desktop\project-2-markove.jpg" width="50" height="50"> -->
 	<p class="margin" >
 		在介绍参考线切图之前，我们需要搞清楚什么是参考线。先讨论一个问题，假如我们需要使用PS设置一个网页，在网页内容居中显示，左右两边都流出200像素的宽度。如果两边都有一条参考线做参考，这样是不是就很方便了。
 	</p>
-<!-- 	<p class="padding" style="background-color: grey; color: white;font-size: 20px;">
-		在介绍参考线切图之前，我们需要搞清楚什么是参考线。先讨论一个问题，假如我们需要使用PS设置一个网页，在网页内容居中显示，左右两边都流出200像素的宽度。如果两边都有一条参考线做参考，这样是不是就很方便了。
-	</p> -->
-	<div style="margin-top: 10vmin;">
+	<div class="margin">
 		<img class="left" src=".\images\task3_31.png">
 	    <img class="right" src=".\images\task3_34.png">
 	</div>
