--- a/c.html
+++ b/c.html
@@ -4,75 +4,13 @@
 	<title>task4@jsshu</title>
 	<meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <style type="text/css">
-        body{
-    	background-color: #EFF0F4;
-        margin-left: 0;
-        margin-right: 0; 
-        }
-    	div.head{
-    		margin-top: 0;
-    		background-color: #68cdd5;
-    		height: 45px;
-    		color: white;
-    		display: flex;
-    		justify-content: space-between;
-    		align-items: center;
-    	}
-        div.head a{
-            text-decoration: none;
-            color: white;
-        }
-        div.input{
-            margin-top: 10px;
-            background-color: white;
-        }
-    	input.account, input.pwd{
-            outline:none;
-            font-size: 1em;
-            height: 60px;
-            padding-left: 80px;
-            border:none;
-            margin-top: 10px;
-    	}
-        form i{
-            background-repeat: no-repeat;
-            background-position: center;
-            background-size: 70%;
-            margin-top: 10px;
-            width: 80px;
-            height: 62px;
-        }
-        .iconact{
-            position: absolute;
-            background-image: url(./images/phone.png);
-        }
-        .iconpwd{
-            position: absolute;
-            background-image: url(./images/pwd.png);
-        }
-    	.foot{
-    		background-color: #68cdd5;
-    		margin-top: 60px;
-    		height: 60px;
-    		font-weight: bold;
-    		font-size: 1.1em;
-    		color: white;
-    		line-height: 60px;
-    		text-align: center;
-    	}
-        footer a{
-            text-decoration: none;
-            float: right;
-            padding-top: 20px;
-        }
-    </style>
+    <link rel="stylesheet" type="text/css" href="./c.css">
 </head>
 <body>
     <header>
     <div class="head">
         <a href="" class="left">关闭</a>
-        <span>登陆</span>
+        <span>登录</span>
         <a href="" class="right">注册</a>
     </div>
     </header>
@@ -90,8 +28,11 @@
     </form>
     </main>
 
-    <div class="foot">
+<!--     <div class="foot">
         登  陆
+    </div> -->
+    <div class="but">
+        <input type="button" value="登 录" class="but">
     </div>
     <footer>
         <a href="">忘记密码?</a>
