--- a/task_5.html
+++ b/task_5.html
@@ -35,6 +35,25 @@
 			text-decoration: none;
 			color: white;
 			}
+		main{
+			margin-top: 50px;
+		}
+		div.pic{
+			background:url(./images/t5_background.jpg) no-repeat center;
+			background-size: 120%;
+			height: 160px;
+		}
+		div.pic img{
+			float: left;
+			margin-left: 20px;
+			margin-right: 20px;
+			margin-top: 40px;
+		}
+		div.intro{
+			float: left;
+			margin-top: 40px;
+			height: 80px;
+		}
 		footer{
 			position: fixed;
 			bottom: 0;
@@ -55,13 +74,13 @@
 			background-color: white;
 			color:#68cdd5;
 			float: left;
-			margin: 5px 0vw 0px 5vw;
+			margin: 0px 0vw 0px 5vw;
 		}
 		footer div.right{
 			background-color: #68cdd5;
 			color: white;
 			float: right;
-			margin: 5px 5vw 0px 0vw;	
+			margin: 0px 5vw 0px 0vw;	
 		}
 		footer div.left a{
 			text-decoration: none;
@@ -81,7 +100,14 @@
 			</div>
 	</header>
 	<main>
-		
+		<div class="pic">
+			<img src="./images/touxiang.png" alt="touxiang" width="80">
+			<div class="intro">
+				<p>高素雅 51岁</p>
+				<p>北京·通州·果园</p>
+			
+			</div>	
+		</div>
 	</main>
 	<footer>
 		<div class="left">
