--- a/task_5.html
+++ b/task_5.html
@@ -43,7 +43,7 @@
 			background-size: 120%;
 			height: 160px;
 		}
-		div.pic img{
+		div.pic>img{
 			float: left;
 			margin-left: 20px;
 			margin-right: 20px;
@@ -53,6 +53,29 @@
 			float: left;
 			margin-top: 40px;
 			height: 80px;
+			color: white;
+		}
+		div.intro div.top{
+			margin-top: 20px;
+			font-size: 1em;
+		}
+		div.intro div.down{
+			font-size: 0.8em;
+
+		}
+		div.prof{
+			height: 50px;
+			line-height: 50px;
+			font-size: 0.9em;
+			font-weight: 500;
+			border-bottom: 1.5px solid #e1e5e7;
+		}
+		div.prof>div{
+			float: left;
+			background-color: #68cdd5;
+			margin: 16px 5px;
+			width: 4px;
+			height: 19.2px;
 		}
 		footer{
 			position: fixed;
@@ -103,10 +126,19 @@
 		<div class="pic">
 			<img src="./images/touxiang.png" alt="touxiang" width="80">
 			<div class="intro">
-				<p>高素雅 51岁</p>
-				<p>北京·通州·果园</p>
-			
+				<div class="top">
+					高素雅 51岁
+				</div>
+				<div class="down">
+					<img src="./images/dingwei.png" width="12" height="18">
+					北京·通州·果园
+				</div>
 			</div>	
+		</div>
+		<div class="prof">
+			<div>
+			</div>
+			<span>专业技能</span>
 		</div>
 	</main>
 	<footer>
