--- a/task_5.html
+++ b/task_5.html
@@ -77,6 +77,42 @@
 			width: 4px;
 			height: 19.2px;
 		}
+		div.cont,div.biaoji{
+			display: flex;
+			align-items: center;
+			margin-left: 10px;
+			height: 50px;
+			font-size: 0.9em;
+			font-weight: 500;
+			border-bottom: 1.5px solid #e1e5e7;
+		}
+		div.yiba{
+			display: flex;
+			align-items: center;
+			margin-left: 10px;
+			font-size: 0.9em;
+			font-weight: 500;
+			border-bottom: 1.5px solid #e1e5e7;
+		}
+		div.vertline{
+			border-right: 1.5px solid #e1e5e7;
+			width: 10px;
+			height: 20px;
+			margin-right: 10px;
+		}
+		div.yibacont{
+			/*margin-left: 120px;*/
+		}
+		div.limh{
+			min-width: 62px;
+			max-width: 62px;
+		}
+		span.tit{
+			color: #C0C0C0;
+		}
+		span.red{
+			color: red;
+		}
 		footer{
 			position: fixed;
 			bottom: 0;
@@ -135,10 +171,45 @@
 				</div>
 			</div>	
 		</div>
+
 		<div class="prof">
 			<div>
 			</div>
 			<span>专业技能</span>
+		</div>
+
+		<div class="biaoji">
+			<img src="./images/xing.png" width="15">
+			<span>住家</span>
+			&nbsp;&nbsp;&nbsp;&nbsp;
+			<img src="./images/xing.png" width="15">
+			<span>不含餐</span>
+		</div>
+
+		<div class="cont">
+			<span class="tit">从业年限</span>
+			<div class="vertline"></div>
+			<span>0-3年</span>
+		</div>
+		<div class="cont">
+			<span class="tit">工作时间</span>
+			<div class="vertline"></div>
+			<span>全天</span>
+		</div>
+		<div class="cont">
+			<span class="tit">服务价格</span>
+			<div class="vertline"></div>
+			<span class="red">25元/小时</span>
+		</div>
+
+		<div class="yiba">
+			<div class="limh">
+				<span class="tit">自我介绍</span>
+			</div>
+			<div class="vertline"></div>
+			<div class="yibacont">
+				<span>我可以我可以我可以，我可以我可以我可以，我可以我可以我可以，我可以我可以我可以，我可以我可以我可以</span>
+			</div>
 		</div>
 	</main>
 	<footer>
