--- a/task_5.html
+++ b/task_5.html
@@ -101,7 +101,7 @@
 			margin-right: 10px;
 		}
 		div.yibacont{
-			/*margin-left: 120px;*/
+			padding: 10px 10px 10px 0px;
 		}
 		div.limh{
 			min-width: 62px;
