--- a/main.html
+++ b/main.html
@@ -26,7 +26,7 @@
 		<a href="./c.html">task4</a>
 		<a href="./task_5.html">task5</a>
 		<br>
-		<a href="./a.html">task1</a>
+		<a href="./a.html">task</a>
 	</div>
 </body>
 </html>
