--- a/main.html
+++ b/main.html
@@ -6,7 +6,7 @@
 	<meta name="viewport" content="width=device-width,initial-scale=1.0">
 	<style type="text/css">
 		.box{
-			width: 800px;
+			width: 100%;
 			height: 800px;
 			border:1px solid red;
 		}
