--- a/task_5.html
+++ b/task_5.html
@@ -90,6 +90,7 @@
 			display: flex;
 			align-items: center;
 			margin-left: 10px;
+			margin-bottom: 65px;
 			font-size: 0.9em;
 			font-weight: 500;
 			border-bottom: 1.5px solid #e1e5e7;
@@ -103,7 +104,7 @@
 		div.yibacont{
 			padding: 10px 10px 10px 0px;
 		}
-		div.limh{
+		div.limw{
 			min-width: 62px;
 			max-width: 62px;
 		}
@@ -203,7 +204,7 @@
 		</div>
 
 		<div class="yiba">
-			<div class="limh">
+			<div class="limw">
 				<span class="tit">自我介绍</span>
 			</div>
 			<div class="vertline"></div>
