--- a/main.html
+++ b/main.html
@@ -21,12 +21,13 @@
 	<p>tasks have been finished</p>
 	<h2>last modify time: 3-13 2018</h2>
 	<div class="box">
-		<a href="./a.html">task1</a>
-		<a href="./b.html">task3</a>
-		<a href="./c.html">task4</a>
-		<a href="./task_5.html">task5</a>
-		<br>
-		<a href="./a.html">task</a>
+		<ol>
+			<li><a href="./a.html">task1</a></li>
+			<li><a href="./b.html">task3</a></li>
+			<li><a href="./c.html">task4</a></li>
+			<li><a href="./task_5.html">task5</a></li>
+			<li><a href="./a.html">task</a></li>
+		</ol>
 	</div>
 </body>
 </html>
