--- a/task_5.html
+++ b/task_5.html
@@ -105,8 +105,7 @@
 			padding: 10px 10px 10px 0px;
 		}
 		div.limw{
-			min-width: 62px;
-			max-width: 62px;
+			white-space: nowrap;
 		}
 		span.tit{
 			color: #C0C0C0;
