--- a/task_6.html
+++ b/task_6.html
@@ -3,58 +3,12 @@
 <head>
 	<title>task6@jsshu</title>
 	<meta charset="utf-8">
-	<meta content="viewport" content="width=device-width initial-scale=1.0">
-	<style type="text/css">
-		header.top{
-			position: fixed;
-			top:0px;
-			height: 60px;
-			width: 100vw;
-			background-color: #68cdd5;
-			line-height: 60px;
-
-		}
-		div.center{
-			display: inline-block;
-			position: absolute;
-			top:50%;
-			left: 50%;
-			transform:translate(-50%,-50%);
-			background-color: #55a8b3;
-			width: 205px;
-			height: 50px;
-			border-radius: 10px;
-		}
-		div.center div{
-			display: inline-block;
-			width: 100px;
-			line-height: 50px;
-			text-align: center;
-			border-radius: 5px;
-			font-weight: bold;
-		}
-		div.left{
-			color: white;
-
-		}
-		div.right{
-			background-color: white;
-			color: #68cdd5;
-		}
-		.gps_icon{
-			background: url(./images/spr_t6.png);
-			width: 19px;
-			height: 23px;
-			background-position: -95px -26px;
-		}
-		header i{
-			position: absolute;
-			right: 20px;
-		}
-	</style>
+	<meta name="viewport" content="width=device-width initial-scale=1.0">
+	<link rel="stylesheet" type="text/css" href="./t6.css">
 </head>
 <body>
 	<header class="top">
+		<div>
 		<div class="center">
 			<div class="left">
 				<span>找雇主</span>
@@ -64,7 +18,25 @@
 			</div>
 		</div>
 		<i class="gps_icon"></i>
+		</div>
 	</header>
+	
+	<main>
+
+		
+	</main>
+	
+	<footer>
+		<div>
+			<span>首页</span>
+		</div>
+		<div class="ftcenter">
+			<i class="edit_icon"></i>
+		</div>
+		<div>
+			<span>我的</span>
+		</div>
+	</footer>
 
 </body>
 </html>
