--- a/task_6.html
+++ b/task_6.html
@@ -8,7 +8,6 @@
 </head>
 <body>
 	<header class="top">
-		<div>
 		<div class="center">
 			<div class="left">
 				<span>找雇主</span>
@@ -18,7 +17,6 @@
 			</div>
 		</div>
 		<i class="gps_icon"></i>
-		</div>
 	</header>
 	
 	<main>
@@ -30,8 +28,13 @@
 		<div>
 			<span>首页</span>
 		</div>
-		<div class="ftcenter">
-			<i class="edit_icon"></i>
+<!-- 		<div class="ftcenter">
+			<img src="" alt="edit" width="56" height="57" >
+		</div>  -->
+		<div>
+		<i class="edit_icon" style="display: block;">
+			
+		</i>
 		</div>
 		<div>
 			<span>我的</span>
