--- a/task_6.html
+++ b/task_6.html
@@ -16,12 +16,83 @@
 				<span>找护工</span>
 			</div>
 		</div>
-		<i class="gps_icon"></i>
+		<i class="dgps_icon"></i>
 	</header>
 	
 	<main>
-
-		
+		<div class="list">
+			
+		</div>
+		<div class="box">
+			<div class="date">
+				<i class="rili_icon"></i>
+				<span>服务日期</span>
+			</div>
+			<div class="content">
+				<span>2017-3-15至2017-3-16</span>
+				<span class="side">25元/小时</span>
+			</div>
+			<div class="location">
+				<i class="gps_icon"></i>
+				<span>北京市大兴区</span>
+			</div>
+		</div>
+		<div class="box">
+			<div class="date">
+				<i class="rili_icon"></i>
+				<span>服务日期</span>
+			</div>
+			<div class="content">
+				<span>2017-3-15至2017-3-16</span>
+				<span class="side">25元/小时</span>
+			</div>
+			<div class="location">
+				<i class="gps_icon"></i>
+				<span>北京市大兴区</span>
+			</div>
+		</div>
+		<div class="box">
+			<div class="date">
+				<i class="rili_icon"></i>
+				<span>服务日期</span>
+			</div>
+			<div class="content">
+				<span>2017-3-15至2017-3-16</span>
+				<span class="side">25元/小时</span>
+			</div>
+			<div class="location">
+				<i class="gps_icon"></i>
+				<span>北京市大兴区</span>
+			</div>
+		</div>
+		<div class="box">
+			<div class="date">
+				<i class="rili_icon"></i>
+				<span>服务日期</span>
+			</div>
+			<div class="content">
+				<span>2017-3-15至2017-3-16</span>
+				<span class="side">25元/小时</span>
+			</div>
+			<div class="location">
+				<i class="gps_icon"></i>
+				<span>北京市大兴区</span>
+			</div>
+		</div>
+		<div class="box boxend">
+			<div class="date">
+				<i class="rili_icon"></i>
+				<span>服务日期</span>
+			</div>
+			<div class="content">
+				<span>2017-3-15至2017-3-16</span>
+				<span class="side">25元/小时</span>
+			</div>
+			<div class="location">
+				<i class="gps_icon"></i>
+				<span>北京市大兴区</span>
+			</div>
+		</div>
 	</main>
 	
 	<footer>
@@ -31,7 +102,7 @@
 <!-- 		<div class="ftcenter">
 			<img src="" alt="edit" width="56" height="57" >
 		</div>  -->
-		<div>
+		<div class="ftcenter">
 		<i class="edit_icon" style="display: block;">
 			
 		</i>
