--- a/task_6.html
+++ b/task_6.html
@@ -4,6 +4,16 @@
 	<title>task6@jsshu</title>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width initial-scale=1.0">
+
+	<!-- 新 Bootstrap 核心 CSS 文件 -->
+	<link href="https://cdn.bootcss.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet">
+
+	<!-- jQuery文件。务必在bootstrap.min.js 之前引入 -->
+	<script src="https://cdn.bootcss.com/jquery/2.1.1/jquery.min.js"></script>
+ 
+	<!-- 最新的 Bootstrap 核心 JavaScript 文件 -->
+	<script src="https://cdn.bootcss.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+
 	<link rel="stylesheet" type="text/css" href="./t6.css">
 </head>
 <body>
@@ -21,7 +31,28 @@
 	
 	<main>
 		<div class="list">
-			
+			<div class="dropdown">
+				<button type="button" class="btn dropdown-toggle" id="dropdownMenu1" 
+						data-toggle="dropdown">
+					主题
+					<span class="caret"></span>
+				</button>
+				<ul class="dropdown-menu" role="menu" aria-labelledby="dropdownMenu1">
+					<li role="presentation">
+						<a role="menuitem" tabindex="-1" href="#">Java</a>
+					</li>
+					<li role="presentation">
+						<a role="menuitem" tabindex="-1" href="#">数据挖掘</a>
+					</li>
+					<li role="presentation">
+						<a role="menuitem" tabindex="-1" href="#">数据通信/网络</a>
+					</li>
+					<li role="presentation" class="divider"></li>
+					<li role="presentation">
+						<a role="menuitem" tabindex="-1" href="#">分离的链接</a>
+					</li>
+				</ul>
+			</div>		
 		</div>
 		<div class="box">
 			<div class="date">
@@ -29,8 +60,11 @@
 				<span>服务日期</span>
 			</div>
 			<div class="content">
-				<span>2017-3-15至2017-3-16</span>
+				<div>
+					<span>2017-3-15至2017-3-16</span>
+				</div>
 				<span class="side">25元/小时</span>
+				<img src="./images/jiantou.png" width="10" height="28">
 			</div>
 			<div class="location">
 				<i class="gps_icon"></i>
@@ -43,8 +77,11 @@
 				<span>服务日期</span>
 			</div>
 			<div class="content">
-				<span>2017-3-15至2017-3-16</span>
+				<div>
+					<span>2017-3-15至2017-3-16</span>
+				</div>
 				<span class="side">25元/小时</span>
+				<img src="./images/jiantou.png" width="10" height="28">
 			</div>
 			<div class="location">
 				<i class="gps_icon"></i>
@@ -57,8 +94,11 @@
 				<span>服务日期</span>
 			</div>
 			<div class="content">
-				<span>2017-3-15至2017-3-16</span>
+				<div>
+					<span>2017-3-15至2017-3-16</span>
+				</div>
 				<span class="side">25元/小时</span>
+				<img src="./images/jiantou.png" width="10" height="28">
 			</div>
 			<div class="location">
 				<i class="gps_icon"></i>
@@ -71,8 +111,11 @@
 				<span>服务日期</span>
 			</div>
 			<div class="content">
-				<span>2017-3-15至2017-3-16</span>
+				<div>
+					<span>2017-3-15至2017-3-16</span>
+				</div>
 				<span class="side">25元/小时</span>
+				<img src="./images/jiantou.png" width="10" height="28">
 			</div>
 			<div class="location">
 				<i class="gps_icon"></i>
@@ -85,8 +128,11 @@
 				<span>服务日期</span>
 			</div>
 			<div class="content">
-				<span>2017-3-15至2017-3-16</span>
+				<div>
+					<span>2017-3-15至2017-3-16</span>
+				</div>
 				<span class="side">25元/小时</span>
+				<img src="./images/jiantou.png" width="10" height="28">
 			</div>
 			<div class="location">
 				<i class="gps_icon"></i>
@@ -97,17 +143,14 @@
 	
 	<footer>
 		<div>
-			<span>首页</span>
+			<img src="./images/home.png" width="36" height="31">
+			<span class="shouye">首页</span>
 		</div>
-<!-- 		<div class="ftcenter">
-			<img src="" alt="edit" width="56" height="57" >
-		</div>  -->
 		<div class="ftcenter">
-		<i class="edit_icon" style="display: block;">
-			
-		</i>
-		</div>
+			<img src="./images/edit.png" alt="edit" width="68" height="68" >
+		</div> 
 		<div>
+			<img src="./images/accon.png" width="31" height="31">
 			<span>我的</span>
 		</div>
 	</footer>
