--- a/main.html
+++ b/main.html
@@ -26,7 +26,7 @@
 			<li><a href="./b.html">task3</a></li>
 			<li><a href="./c.html">task4</a></li>
 			<li><a href="./task_5.html">task5</a></li>
-			<li><a href="./a.html">task</a></li>
+			<li><a href="./task_6.html">task6</a></li>
 		</ol>
 	</div>
 </body>
