--- a/task_6.html
+++ b/task_6.html
@@ -34,18 +34,62 @@
 			<div class="dropdown">
 				<button type="button" class="btn dropdown-toggle" id="dropdownMenu1" 
 						data-toggle="dropdown">
-					主题
+					所在地
 					<span class="caret"></span>
 				</button>
 				<ul class="dropdown-menu" role="menu" aria-labelledby="dropdownMenu1">
 					<li role="presentation">
-						<a role="menuitem" tabindex="-1" href="#">Java</a>
+						<a role="menuitem" tabindex="-1" href="#">北京</a>
 					</li>
 					<li role="presentation">
-						<a role="menuitem" tabindex="-1" href="#">数据挖掘</a>
+						<a role="menuitem" tabindex="-1" href="#">天津</a>
 					</li>
 					<li role="presentation">
-						<a role="menuitem" tabindex="-1" href="#">数据通信/网络</a>
+						<a role="menuitem" tabindex="-1" href="#">上海</a>
+					</li>
+					<li role="presentation" class="divider"></li>
+					<li role="presentation">
+						<a role="menuitem" tabindex="-1" href="#">分离的链接</a>
+					</li>
+				</ul>
+			</div>
+			<div class="dropdown">
+				<button type="button" class="btn dropdown-toggle" id="dropdownMenu1" 
+						data-toggle="dropdown">
+					食宿
+					<span class="caret"></span>
+				</button>
+				<ul class="dropdown-menu" role="menu" aria-labelledby="dropdownMenu1">
+					<li role="presentation">
+						<a role="menuitem" tabindex="-1" href="#">北京</a>
+					</li>
+					<li role="presentation">
+						<a role="menuitem" tabindex="-1" href="#">上海</a>
+					</li>
+					<li role="presentation">
+						<a role="menuitem" tabindex="-1" href="#">TT</a>
+					</li>
+					<li role="presentation" class="divider"></li>
+					<li role="presentation">
+						<a role="menuitem" tabindex="-1" href="#">分离的链接</a>
+					</li>
+				</ul>
+			</div>
+			<div class="dropdown">
+				<button type="button" class="btn dropdown-toggle" id="dropdownMenu1" 
+						data-toggle="dropdown">
+					病人情况
+					<span class="caret"></span>
+				</button>
+				<ul class="dropdown-menu" role="menu" aria-labelledby="dropdownMenu1">
+					<li role="presentation">
+						<a role="menuitem" tabindex="-1" href="#">优秀</a>
+					</li>
+					<li role="presentation">
+						<a role="menuitem" tabindex="-1" href="#">活动</a>
+					</li>
+					<li role="presentation">
+						<a role="menuitem" tabindex="-1" href="#">障碍</a>
 					</li>
 					<li role="presentation" class="divider"></li>
 					<li role="presentation">
@@ -54,7 +98,7 @@
 				</ul>
 			</div>		
 		</div>
-		<div class="box">
+		<div class="box boxstart">
 			<div class="date">
 				<i class="rili_icon"></i>
 				<span>服务日期</span>
@@ -91,6 +135,7 @@
 		<div class="box">
 			<div class="date">
 				<i class="rili_icon"></i>
+
 				<span>服务日期</span>
 			</div>
 			<div class="content">
