--- a/main.html
+++ b/main.html
@@ -12,6 +12,7 @@
 		}
 		.box a{
 			font-size: 1.2em;
+			text-decoration: none;
 		}
 		a:visited{
 			color: black;
@@ -28,7 +29,7 @@
 <body>
 	<h1>learn css@jsshu</h1>
 	<p>tasks have been finished</p>
-	<h2 id="moditime">last modify time:</h2>
+	<h2 id="moditime">last modify time: 04-07 2018</h2>
 	<div class="box">
 		<ol>
 			<li><a href="./a.html">task1</a></li>
