--- a/js-p1.html
+++ b/js-p1.html
@@ -39,9 +39,9 @@
 		var ys;
 
 		function shan(){
-			if (ys == 1){}
-				else{
-				// clearInterval(ys);
+			// if (ys == 1){}
+			// 	else{
+				clearInterval(ys);
 					ys = setInterval(
 						function(){	
 							var a = document.getElementsByClassName('child');
@@ -67,7 +67,7 @@
 							}
 						},500
 					);
-				}	
+				// }	
 		}
 
 		function ccc(){
