--- a/jsshu/c.html
+++ b/jsshu/c.html
@@ -4,7 +4,7 @@
 	<title>task4@jsshu</title>
 	<meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" type="text/css" href="./c.css">
+    <link rel="stylesheet" type="text/css" href="../styles/c.css">
 </head>
 <body>
     <header>
